[project]
name = "python-packet-sniffer"
version = "0.1.0"
description = "A packet sniffer"
authors = [
    {name = "George Moore" }
]
requires-python = ">=3.7,<4"
dependencies = [
    "scapy (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
